<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="sum_string">%d + %d</string>
    <string name="answer">%d</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="score">%d/%d</string>
    <string name="timer">%ds</string>
    <string name="times_up">Times Up!</string>
    <string name="play_again">Play Again</string>
    <string name="go">GO!</string>
    <string name="dummy_answer">15</string>
    <string name="dummy_score">0/0</string>
    <string name="dummy_question">1+1</string>
    <string name="start_timer">30s</string>
</resources>
