<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:onClick="start"
        android:padding="40dp"
        android:text="@string/go"
        android:textSize="60sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/gameConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/correct_answer"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

        <TextView
            android:id="@+id/sumTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/dummy_question"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#03A9F4"
            android:padding="10dp"
            android:text="@string/dummy_score"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sumTextView">

            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E91E63"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="0"
                android:text="@string/dummy_answer"
                android:textSize="80sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#9A7BDA"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="1"
                android:text="@string/dummy_answer"
                android:textSize="80sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#42B9A8"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="2"
                android:text="@string/dummy_answer"
                android:textSize="80sp"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFEB3B"
                android:gravity="fill"
                android:onClick="chooseAnswer"
                android:tag="3"
                android:text="@string/dummy_answer"
                android:textSize="80sp"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />
        </android.support.v7.widget.GridLayout>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:background="#FFC107"
            android:padding="10dp"
            android:text="@string/start_timer"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#CDDC39"
            android:onClick="restart"
            android:padding="10dp"
            android:text="@string/play_again"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTextView" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>